# FilterCore-FPGA

./: .gitignore  .gitmodules
Project FPGA/: README.txt
Project Raspberry/: README.txt
Project_FPGA/: ECP5 FPGA pins.txt  README.txt  Testebench Commands.txt  colorlight_i9.lpf  design.sv  design.vvp  designer.sv  designer.vvp  filter.sv  filter_fsm.sv  handshake_fsm.sv  handshake_receiver.sv  pwm_generator.sv  run_project.bat  simular_designer.bat  tb_design.sv  tb_designer.sv  tb_designer.vvp  test_designer.bat  water_level.sv  wave_generate.bat
Project_Raspberry/: CMakeLists.txt
Project_Raspberry/lib/: events.h  units.h
Project_Raspberry/lib/components/analog/: ds18b20.h  ph4502c.h  tds_meter.h
Project_Raspberry/lib/components/digital/: buttons.h
Project_Raspberry/lib/components/i2c/: ads1115.h
Project_Raspberry/lib/components/miscellaneous/: notifications.h
Project_Raspberry/lib/components/oled/: oled_display.h  oled_environment.h  oled_prints.h  oled_screen.h  ssd1306_text.h
Project_Raspberry/lib/components/oled/fonts/: ssd1306_font.h  ssd1306_symbols_large.h
Project_Raspberry/lib/miscellaneous/: handshake.h  notifications.h  sensor_analyzer.h  sensor_configs.h
Project_Raspberry/lib/protocols/i2c/: i2c_configs.h
Project_Raspberry/lib/screens/: default_screen.h  notifications_screen.h  ph_screen.h  tds_screen.h  temperature_screen.h
Project_Raspberry/lib/tasks/: task_display.h  task_handshake.h  task_pagination.h  task_sensors.h
Project_Raspberry/src/: CMakeLists.txt  main.c
Project_Raspberry/src/components/analog/: ds18b20.c  ph4502c.c  tds_meter.c
Project_Raspberry/src/components/digital/: buttons.c
Project_Raspberry/src/components/i2c/: ads1115.c
Project_Raspberry/src/components/oled/: oled_display.c  oled_environment.c  oled_prints.c  ssd1306_text.c
Project_Raspberry/src/miscellaneous/: handshake.c  notifications.c  sensor_analyzer.c
Project_Raspberry/src/protocols/i2c/: i2c_configs.c
Project_Raspberry/src/screens/: default_screen.c  notifications_screen.c  ph_screen.c  tds_screen.c  temperature_screen.c
Project_Raspberry/src/tasks/: task_display.c  task_handshake.c  task_pagination.c  task_sensors.c
